<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_game_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:shadowColor="@android:color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="2"
        android:text="@string/game_over"
        android:textColor="@color/light_red"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_your_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/your_score"
        android:textColor="@color/text"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_try"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:background="@drawable/btn_red"
        android:text="@string/try_again"
        android:textColor="@color/text"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_home"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_green"
        android:text="@string/home"
        android:textColor="@color/text"
        android:textSize="40sp"
        android:textStyle="bold" />
</LinearLayout>
